AC_INIT([b58-py], [0.1], [tom@oxix.org])

# We don't need a C compiler, but can't work out how to get automake
# to know that (tried technique at http://stackoverflow.com/questions/9653374/suppress-c-source-seen-but-cc-undefined-in-automake).
AC_PROG_CC

AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE

AC_OUTPUT
